namespace Player
{
    public class EnemyConstData
    {
        public const string IsWalking = "IsWalking"; 
        public const string IsRunning = "IsRunning";
        public const string Hit = "Hit";
        public const string Hit2 = "Hit_2";
        public const string Die = "Die";
        public const string Jump = "Jump";
        public const string Landed = "Landed";
        public const string AttackTrigger = "Attack";
        public const string RangedAttackTrigger = "Ranged Attack";
    }
}